--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "bun run --hot server/index.ts"
   },
   "dependencies": {
-    "hono": "^4.4.11"
+    "hono": "^4.4.11",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest"
