feat: post shipment

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --hot server/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.2",
     "hono": "^4.4.11",
     "zod": "^3.23.8"
   },
