--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,6 +16,11 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@server/*": ["../server/*"]
+    },
 
     /* Linting */
     "strict": true,
@@ -23,5 +28,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "../server/**/*.ts"]
 }
