--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
+    "@tanstack/react-query": "^5.49.2",
     "hono": "^4.4.11",
     "zod": "^3.23.8"
   },
