--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@logto/react": "^3.0.14",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-router": "^1.43.10",
     "autoprefixer": "^10.4.19",
