--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hono/zod-validator": "^0.2.2",
     "@tanstack/react-query": "^5.49.2",
     "hono": "^4.4.11",
+    "jose": "^5.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
