--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@logto/react": "^3.0.14",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-router": "^1.43.10",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "hono": "^4.4.11",
+    "lucide-react": "^0.400.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
