--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
     "@tanstack/react-query": "^5.49.2",
-    "drizzle-orm": "^0.31.2",
+    "drizzle-orm": "0.32.0",
     "hono": "^4.4.11",
     "jose": "^5.6.3",
     "pg": "^8.12.0",
